--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "imagemin-pngquant": "^6.0.0",
     "jquery": "^3.3.1",
     "jquery-modal": "^0.9.1",
+    "normalize.css": "^8.0.0",
     "slick-carousel": "^1.8.1"
   }
 }
