--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "gulp-imagemin": "^4.1.0",
     "gulp-rename": "^1.3.0",
     "gulp-sass": "^4.0.1",
+    "gulp-svgmin": "^1.2.4",
+    "gulp-svgstore": "^6.1.1",
     "gulp-uglifyjs": "^0.6.2",
     "imagemin-pngquant": "^6.0.0",
     "jquery": "^3.3.1",
