--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jquery": "^3.3.1",
     "jquery-modal": "^0.9.1",
     "normalize.css": "^8.0.0",
+    "pug": "^2.0.3",
     "slick-carousel": "^1.8.1"
   }
 }
